# sphinx-sql-backend

./: .gitignore  .pre-commit-config.yaml  CHANGES.rst  README.rst  pyproject.toml  setup.cfg
.github/workflows/: main.yml  release.yml
docs/: cli-tool.rst  conf.py  configuration.rst  database-spec.rst  getting-started.rst  index.rst
docs/locales/ja/LC_MESSAGES/: changelogs.po  cli-tool.po  configuration.po  database-spec.po  getting-started.po  index.po
src/atsphinx/sqlite3fts/: __init__.py  builders.py  cli.py  events.py  models.py  playhouse.py
src/atsphinx/sqlite3fts/static/: searchtools.js
tests/: conftest.py  test_builders.py  test_events.py  test_model.py  test_services.py  util.py
tests/roots/test-default/: conf.py
