[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx-sql-backend"
authors = [{name = "Andreas Motl", email = "andreas.motl@panodata.org"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Extension",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Documentation :: Sphinx",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Internet :: WWW/HTTP :: Site Management",
  "Topic :: Software Development",
  "Topic :: Software Development :: Documentation",
  "Topic :: Text Processing :: Markup :: HTML",
]
dynamic = ["version", "description"]
dependencies = [
  "docutils",
  "peewee",
  "psycopg2[binary]",
  "sphinx<7",
]

[project.optional-dependencies]
cli = [
  "Click",
]
docs = [
  "furo",
  "sphinx-intl",
]
test = [
  "pytest",
]

[project.scripts]
atsphinx-sqlite3fts = "atsphinx.sqlite3fts.cli:main"

[project.urls]
Home = "https://github.com/panodata/sphinx-sql-backend"
Repository = "https://github.com/panodata/sphinx-sql-backend"
Documentation = "https://sphinx-sql-backend.readthedocs.io/"

[tool.flit.module]
name = "atsphinx.sqlite3fts"

[tool.flit.sdist]
exclude = [
  ".github",
  "docs/_build",
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
